@@ -31,4 +31,16 @@
 - job option edition through graphical dialog (extract print options
   from request and rebuild a printer properties dialog)
 
-- support for external printer tool
+- support for external printer tool (escputil)
+
+- add a "--stdin" option for apps that want to use a pipe (and disable
+  the Files tab). Otherwise there can be a conflict between the wanted
+  pipe and a file that would be selected in the Files tab.
+
+- See if the page selection option (psselect) couldn't be enabled/disabled
+  according to the file type, or at least warn the user if psselect is
+  irrelevant because of the file type.
+
+- restarting server: use of "ps" in a subshell to get the pid, possibility
+  of authentification (put this into separate program that would restart
+  itself using kdesu).
